[tool.poetry]
name = "bbs"
version = "0.1.0"
description = "this is exmaple"
authors = ["yoshiya0503"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.5"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
pymysql = "^0.10.0"
flask-migrate = "^2.5.3"
graphene = "2.1.8"
inflection = "^0.5.0"
flask-cors = "^3.0.8"
flask-redis = "^0.4.0"
flask-graphql = "^2.0.1"
graphene-sqlalchemy = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
